adicionei um fato

--- a/teste.html
+++ b/teste.html
@@ -13,12 +13,11 @@
     </header>
     <main>
         <section>
+            <p>Lakers > Celtics </p>
             <a href="RoteiroFaçanha.txt" download>Baixar arquivo TXT</a>
         </section>
+
     </main>
-
-
-
 
 </body>
 </html>
