--- a/teste.html
+++ b/teste.html
@@ -14,6 +14,8 @@
     <main>
         <section>
             <p>Lakers > Celtics</p>
+            <img src="lebronhappy.avif">
+            <img src="tatumdepre.avif">
             <a href="RoteiroFaçanha.txt" download>Baixar arquivo TXT</a>
         </section>
         
