adicionei imagens e alterei o arquivo para dowload

--- a/teste.html
+++ b/teste.html
@@ -12,14 +12,21 @@
        <P>Apenas um fã da NBA programando</P>
     </header>
     <main>
-        <section>
-            <p>Lakers > Celtics</p>
-            <img src="lebronhappy.avif">
-            <img src="tatumdepre.avif">
-            <a href="RoteiroFaçanha.txt" download>Baixar arquivo TXT</a>
-        </section>
-        
+        <center>
+           <section>
+            <p class="fatos">Lakers > Celtics</p>
+            <img src="lebronhappy.jpg" height="150px" width="300px" ><br>
+            <img src="tatumdepre.avif" height="150px" width="300px" >
+            <br>
+            <p class="fatos">Sem choro</p>
+           
+        </center>
+           </section>
     </main>
-
+    <footer>
+        <center>
+    <a href="kobe.pdf" download>Só uma pequena lembrança</a>
+    </center>
+    </footer>
 </body>
 </html>
